# btf2go

./: .coderabbit.yaml  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  go.mod  go.sum
.agents/: SKILLS.md  curator-invocation-prompt.md  rerun-curator.sh  skills.lock.json
.github/workflows/: ci.yml
aya-export/: Cargo.toml  README.md
aya-export/examples/: smoke.rs
aya-export/src/: lib.rs
cmd/btf2go/: main.go  main_test.go  table.go
docs/: aya-maps.md  aya-quickstart.md
examples/aya-roundtrip/: main.go
examples/c-roundtrip/: main.go
internal/align/: align.go  align_test.go  goalign.go  goalign_test.go
internal/btfparser/: bridge.go  bridge_test.go  decode.go  decode_test.go  load.go  load_test.go  lookup.go  lookup_test.go  resolve.go  resolve_test.go  sanitize.go  sanitize_test.go  suggest_test.go
internal/generator/: generate.go  generate_test.go  shared.go  shared_test.go
internal/traverse/: funcproto_test.go  (+2 more)
packer/: .gitignore  Makefile  README.md  proxmox.pkr.hcl
tests/: golden_test.go  rust_aya_test.go
tests/fixtures/rust/: Cargo.toml  fixture.elf
tests/fixtures/rust-aya/maps-happy/: Cargo.toml  README.md  maps-happy.elf  rust-toolchain.toml
tests/fixtures/rust-aya/maps-happy/golden_aya/: types.go
tests/fixtures/rust-aya/maps-happy/golden_no_aya/: types.go
tests/fixtures/rust-aya/maps-happy/src/: main.rs
tests/fixtures/rust-aya/maps-missing-export/: Cargo.toml  README.md  expected.err  maps-missing-export.elf
tests/fixtures/rust-aya/maps-missing-export/.cargo/: config.toml
tests/fixtures/rust-aya/maps-missing-export/src/: main.rs
tests/fixtures/rust/eventspkg/: events.go
tests/fixtures/rust/src/: main.rs
validation/: SETUP.md  refresh.sh
(+114 files in other folders)
