[package]
name = "aya-btf-fixture"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf = "0.1"

[[bin]]
name = "fixture"
path = "src/main.rs"

[profile.dev]
debug = 2
opt-level = 3
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.release]
debug = 2
opt-level = 3
overflow-checks = false
panic = "abort"
codegen-units = 1
